adjusted menu and plaguex

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
     <span class="hamburger hamburger-3"></span>
   </label>
   
-  <a href="pages/plaguex.html" class="menu-item"><i class="fa fa-plus"></i> </a>
+  <a href="pages/plaguex.html" class="menu-item"><i class="fa fa-plus"><img src="./img/plaguex.png"height="42" width="42"></i> </a>
 
 
 </nav>
