--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" href="css/style.css">
 
 	</head>
-	<body>
+	<body background="img/backgrounds/psych.gif" width="100%" height="auto">
 	
 		
 		<script src="js/bootstrap.min.js"></script>
