--- a/www/pages/plaguex.html
+++ b/www/pages/plaguex.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" href="../css/master.css">
 
 	</head>
-<body>	
+<body style="background:black;">	
 
 			
 <nav class="menu">
