--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
   </label>
   
   <a href="pages/plaguex.html" class="menu-item"><i class="fa fa-plus"><img src="./img/plaguex.png"height="42" width="42"></i> </a>
+  <a href="pages/emu/mobile.html" class="menu-item"><i class="fa fa-plus"><img src="./img/emu.png"height="42" width="42"></i> </a>
 
 
 </nav>
