--- a/www/pages/plaguex.html
+++ b/www/pages/plaguex.html
@@ -22,8 +22,7 @@
   </label>
   
   <a href="../index.html" class="menu-item"><img style="padding-top: 5px;" src="../img/home.png" height="25" width="30"></a>
-
-
+  <a href="emu/mobile.html" class="menu-item"><i class="fa fa-plus"><img src="./img/emu.png"height="42" width="42"></i> </a>
 
 </nav>
 <br>
